# selexqc

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
examples/: generate_fixture.rs
nix/: formatter.nix  overlays.nix  packages.nix  shell.nix
src/: analyze.rs  cluster.rs  collector.rs  compare.rs  construct.rs  count.rs  enrich.rs  io.rs  lib.rs  main.rs  matcher.rs  output.rs  search.rs  stats.rs  validate.rs
tests/: integration.rs
tests/fixtures/: test.fastq
