[package]
name = "selexqc"
version = "0.2.0"
edition = "2024"
authors = ["Seungwon Lee lsw1167@gmail.com>"]
license = "MIT"
repository = "https://github.com/mulatta/selexqc"
homepage = "https://github.com/mulatta/selexqc"
documentation = "https://docs.rs/selexqc"
readme = "README.md"
description = "SELEX analysis toolkit: construct QC, sequence counting, and enrichment analysis"
keywords = ["bioinformatics", "fasta", "fastq", "selex", "aptamer"]
categories = ["science", "command-line-utilities"]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
arrow = "53.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
indicatif = "0.17"
memchr = "2.7"
needletail = "0.5"
parquet = "53.0"
rayon = "1.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
